--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,3 +1,4 @@
+<% include ./partials/messages.ejs %>
 <form action="/users/login" method="post">
     <label>Email</label>
     <input type="email" name="email" id="email" placeholder="Enter Email" value="<%= typeof(name)!='undefined' ? email : ''%>" required><br>
