--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://bootswatch.com/4/litera/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 
+    <link rel="stylesheet" href="/css/style.css" type="text/css">
     <title>CampusBid</title>
 </head>
 <body style="margin: 10px">
