--- a/views/registerUser.ejs
+++ b/views/registerUser.ejs
@@ -1,12 +1,65 @@
-<% include ./partials/messages.ejs %>
-<form action="/users/register" method="post">
-    <label>Name</label>
-    <input type="name" name="name" id="name" placeholder="Enter Name" value="<%= typeof(name)!='undefined' ? name : ''%>" required><br>
-    <label>Email</label>
-    <input type="email" name="email" id="email" placeholder="Enter Email" value="<%= typeof(email)!='undefined' ? email : ''%>" required><br>
-    <label>Password</label>
-    <input type="password" name="password" id="password" placeholder="Create password" required><br>
-    <label>Confirm Password</label>
-    <input type="password" name="password2" id="password2" placeholder="Confirm password" required><br>
-    <button type="submit" value="Register">Register</button>
-</form>
+<main>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="h1">campus<b>Bid</b></div>
+        </div>
+        <br>
+        <div class="row">
+            <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
+                <div class="card card-custom">
+                    <div class="card-body">
+                        <h5 class="card-title text-center">
+                            Register
+                        </h5>
+                        <% include ./partials/messages.ejs %>
+                        <form action="" method="post"
+                        ">
+                        <div class="form-label-group">
+                            <label>Name</label>
+                            <input type="name" name="name" class="form-control input-custom" id="name"
+                                   placeholder="Enter Name"
+                                   value="<%= typeof(name) != 'undefined' ? name : '' %>" required><br>
+                        </div>
+                        <div class="form-label-group">
+                            <label>Email</label>
+                            <input type="email" name="email" class="form-control input-custom" id="email"
+                                   placeholder="Enter Email"
+                                   value="<%= typeof(email) != 'undefined' ? email : '' %>" required><br>
+                        </div>
+
+
+                        <div class="form-label-group">
+                            <label>Phone</label>
+                            <div class="input-group">
+                                <div class="input-group-prepend">
+                                    <span class="input-group-text" id="basic-addon1">+91</span>
+                                </div>
+                                <input type="text" name="userPhone" class="form-control input-custom" id="userPhone"
+                                       placeholder="Enter Phone Number"
+                                       value="<%= typeof(userPhone) != 'undefined' ? userPhone : '' %>" required>
+                            </div>
+                            <br>
+                        </div>
+
+                        <div class="form-label-group">
+                            <label>Password</label>
+                            <input type="password" name="password" class="form-control input-custom" id="password"
+                                   placeholder="Create password" value="<%= typeof(password) != 'undefined' ? password : '' %>" required><br>
+                        </div>
+                        <div class="form-label-group">
+                            <label>Confirm Password</label>
+                            <input type="password" name="password2" class="form-control input-custom" id="password2"
+                                   placeholder="Confirm password" value="<%= typeof(password2) != 'undefined' ? password2 : '' %>" required><br>
+                        </div>
+                        <button type="submit" class="btn btn-lg btn-primary btn-block text-uppercase btn-custom"
+                                value="Register">Register
+                        </button>
+                        <br>
+                        Already have a account ? <a href="/users/login">Login</a>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</main>
