add phone number to user schema and register page

--- a/views/registerUser.ejs
+++ b/views/registerUser.ejs
@@ -34,7 +34,7 @@
                                 <div class="input-group-prepend">
                                     <span class="input-group-text" id="basic-addon1">+91</span>
                                 </div>
-                                <input type="text" name="userPhone" class="form-control input-custom" id="userPhone"
+                                <input type="number" name="userPhone" class="form-control input-custom" id="userPhone"
                                        placeholder="Enter Phone Number"
                                        value="<%= typeof(userPhone) != 'undefined' ? userPhone : '' %>" required>
                             </div>
