show products in home page

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="/css/style.css" type="text/css">
     <title>CampusBid</title>
 </head>
-<body style="margin: 10px">
+<body>
 
 <%- body %>
 
