--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,7 +1,7 @@
 <main>
     <div class="container">
         <div class="row justify-content-center">
-            <div class="h1">campus<b>Bid</b></div>
+            <a class="title" href="/home"><div class="h1">campus<b>Bid</b></div></a>
         </div>
         <br>
         <div class="row">
