add user drop down at nav bar

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -51,7 +51,7 @@ body{
     background-position: center;
 }
 
-.text {
+.maxLines2Text {
     overflow: hidden;
     text-overflow: ellipsis;
     display: -webkit-box;
