--- a/views/products.ejs
+++ b/views/products.ejs
@@ -17,20 +17,24 @@
             <li class="nav-item">
                 <a href="#">Link</a>
             </li>
-            <li class="nav-item dropdown">
-                <a class="dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Dropdown
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                </div>
-            </li>
-            <li class="nav-item">
-                <a class="disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-            </li>
+
+            <% if(typeof userName != "undefined"){ %>
+                <li class="nav-item dropdown">
+                    <a class="dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <%= userName %>
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="/dashboard">Account</a>
+                        <a class="dropdown-item" href="#">Sell On campusBid</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="/users/logout">Logout</a>
+                    </div>
+                </li>
+            <% }else{ %>
+                <li class="nav-item">
+                    <a href="/users/login">Login</a>
+                </li>
+            <% } %>
         </ul>
     </div>
 </nav>
@@ -82,7 +86,7 @@
                 </ul>
             </div>
 
-            <% include ./partials/products.ejs %>
+            <% include partials/productsTemplate.ejs %>
         </div>
 
 
