add a single product page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -60,3 +60,7 @@ body{
     -webkit-line-clamp: 2; /* number of lines to show */
     -webkit-box-orient: vertical;
 }
+
+.comment-box{
+    border-bottom: 1px dotted;
+}
