--- a/views/partials/productsTemplate.ejs
+++ b/views/partials/productsTemplate.ejs
@@ -3,8 +3,8 @@
             <% products.forEach(function(product){ %>
             <div class="custom-flex-child">
                 <div class="card">
-                    <a href="/products/<%=product._id%>">
-                    <img width="200px" height="200px" style="background-image: url('<%= product.imageLink %>');">
+                    <a href="/products/id/<%=product._id%>">
+                    <img width="200px" height="200px" style="background-image: url('<%=product.imageLink%>');">
                     <div class="card-body">
                         <h5 class="card-title">
                             <div class="maxLines2Text">
