seperate category side bar and initialize the user profile page

--- a/views/products.ejs
+++ b/views/products.ejs
@@ -5,7 +5,7 @@
             <div class="col-md-4 col-sm-12">
                 <div class="input-group  mb-3">
                     <form class="form-inline" action="/products/search" method="get">
-                        <input type="text" name="searchQuery" class="form-control input-custom mr-2" placeholder="Search" aria-label="Search" aria-describedby="button-search">
+                        <input type="text" name="searchQuery" class="form-control input-custom mr-2" placeholder="Search All Products" aria-label="Search" aria-describedby="button-search">
                         <div class="input-group-append">
                             <button class="btn btn-outline-danger" type="submit" id="button-addon2"><i class="fas fa-search"></i></button>
                         </div>
@@ -15,41 +15,11 @@
         </div>
         <div class="row">
             <div class="col-md-3 col-sm-12">
-                <ul style="list-style: none;">
-                    <li><a href="#">All</a></li>
-                    <li><a href="#">Books, Novels & Notes</a></li>
-                    <li><a href="#">Stationery</a></li>
-                    <ul style="list-style: none">
-                        <li><a href="#">Calculators</a></li>
-                        <li><a href="#">Other Stationery Items</a></li>
-                    </ul>
-                    <li><a href="#">Electronics</a></li>
-                    <ul style="list-style: none">
-                        <li><a href="#">Computers</a></li>
-                        <li><a href="#">Laptops</a></li>
-                        <li><a href="#">Computer Accessories</a></li>
-                        <li><a href="#">Mobile Phones</a></li>
-                        <li><a href="#">Tablets</a></li>
-                        <li><a href="#">Mobile Accessories</a></li>
-                        <li><a href="#">Speakers</a></li>
-                        <li><a href="#">Other Electronic Items</a></li>
-                    </ul>
-                    <li><a href="#">Furniture & Decor</a></li>
-                    <ul style="list-style: none">
-                        <li><a href="#">Furniture</a></li>
-                        <li><a href="#">Desk Accessories</a></li>
-                        <li><a href="#">Paintings</a></li>
-                        <li><a href="#">Other Furniture Items</a></li>
-                    </ul>
-                    <li><a href="#">Bicycles</a></li>
-                    <li><a href="#">Music Instruments</a></li>
-                    <li><a href="#">Sports & Gym</a></li>
-                    <li><a href="#">Bags - Luggage</a></li>
-                    <li><a href="#">Other Items</a></li>
-                </ul>
+                <% include ./partials/categorySideBar.ejs %>
             </div>
-
-            <% include partials/productsTemplate.ejs %>
+            <div class="col-md-8 col-sm-12">
+                <% include ./partials/productsTemplate.ejs %>
+            </div>
         </div>
 
 
