--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,1 +1,45 @@
-<%= user.name %>
+<% include ./partials/navbar.ejs %>
+<main style="margin:10px ;margin-top: 70px; ">
+    <div class="container">
+        <br>
+        <div class="row">
+            <div class="col-sm-9 col-md-7 col-lg-5 mx-auto mb-4">
+                <div class="card card-custom">
+                    <div class="card-body">
+                        <h5 class="card-title text-center">
+                            User Profile
+                        </h5>
+                        <% include ./partials/messages.ejs %>
+                        <form action="/products/createProduct" method="post">
+                            <div class="form-label-group">
+                                <strong><label>Name:</label></strong>
+                                <%= user.name %>
+                            </div>
+                            <div class="form-label-group">
+                                <strong><label>Email:</label></strong>
+                                <%= user.email %>
+                            </div>
+                            <div class="form-label-group">
+                                <strong><label>Phone:</label></strong>
+                                <%= user.userPhone %>
+                            </div>
+                            <div class="form-label-group">
+                                <strong><label>Registered Since:</label></strong>
+                                <%= user.date %>
+                            </div>
+
+                            <div class="form-label-group">
+                                <strong><label>Your Products Which are Online</label></strong>
+                                <br>
+                                <% include ./partials/dashboardProductsTemplate.ejs %>
+                            </div>
+
+
+
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</main>
