fix bugs and category in single page tab

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -29,7 +29,7 @@
                             </div>
 
                             <div class="form-label-group">
-                                <strong><label>Your Products Which are Online</label></strong>
+                                <strong><label>Your Products</label></strong>
                                 <br>
                                 <% include ./partials/dashboardProductsTemplate.ejs %>
                             </div>
