--- a/views/singleProductPage.ejs
+++ b/views/singleProductPage.ejs
@@ -21,8 +21,10 @@
                 <% include ./partials/messages.ejs %>
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb">
+                        <!--
                         <li class="breadcrumb-item"><a href="#">Electronics</a></li>
-                        <li class="breadcrumb-item active" aria-current="page">Computers</li>
+                        -->
+                        <li class="breadcrumb-item active" aria-current="page"><%=product.category%></li>
                     </ol>
                 </nav>
 
