--- a/views/partials/dashboardProductsTemplate.ejs
+++ b/views/partials/dashboardProductsTemplate.ejs
@@ -2,21 +2,28 @@
     <tbody id="detailsTableBody">
 
     <% products.forEach(function(product){ %>
-        <tr>
-            <td><img width="40px" src="<%=product.imageLink%>"></td>
-            <th><%= product.productName %></th>
-            <td>Rs <%= product.price %></td>
-            <td>
-                <form action="/products/delete" method="post">
-                    <input type="hidden" name="productId" value="<%=product._id%>">
-                    <button type="submit" class="close" >
-                        <span aria-hidden="true"><i class="fas fa-trash"></i></span>
-                    </button>
-                </form>
-            </td>
-        </tr>
+    <tr>
+        <td>
+            <a href="/products/id/<%= product._id %>">
+                <img width="40px" src="<%= product.imageLink %>">
+            </a>
+        </td>
+        <th><%= product.productName %> <br>
+            <% if(user._id == "5c84bf99f5af921e2d1c417e"){ %>
+                Seller: <%= product.sellerEmail %>
+            <% } %>
+        </th>
+        <td>Rs <%= product.price %></td>
+        <td>
+            <form action="/products/delete" method="post">
+                <input type="hidden" name="productId" value="<%= product._id %>">
+                <button type="submit" class="close">
+                    <span aria-hidden="true"><i class="fas fa-trash"></i></span>
+                </button>
+            </form>
+        </td>
+    </tr>
     <% }) %>
-
 
     </tbody>
 </table>
