fix placeholders on different pages and fix user not showing in nav bar in single product page

--- a/views/createProductPage.ejs
+++ b/views/createProductPage.ejs
@@ -47,7 +47,7 @@
                                         <span class="input-group-text" id="basic-addon1">₹</span>
                                     </div>
                                     <input type="number" name="price" class="form-control input-custom"
-                                           placeholder="Enter Phone Number" id="price"
+                                           placeholder="Enter Price" id="price"
                                            value="<%= typeof(price) != 'undefined' ? price : '' %>" required>
                                 </div>
                                 <br>
