--- a/views/partials/productsTemplate.ejs
+++ b/views/partials/productsTemplate.ejs
@@ -3,7 +3,7 @@
             <% products.forEach(function(product){ %>
             <div class="custom-flex-child">
                 <div class="card">
-                    <a href="/products/id/<%=product._id%>">
+                    <a style="text-decoration: none;" href="/products/id/<%=product._id%>">
                     <img width="200px" height="200px" style="background-image: url('<%=product.imageLink%>');">
                     <div class="card-body">
                         <h5 class="card-title">
