--- a/views/login.ejs
+++ b/views/login.ejs
@@ -22,7 +22,7 @@
                             <div class="form-label-group">
                                 <label>Password</label>
                                 <input type="password" name="password" class="input-custom form-control" id="password"
-                                       placeholder="Create password" required><br>
+                                       placeholder="Password" required><br>
                             </div>
                             <button class="btn btn-lg btn-primary btn-block text-uppercase btn-custom" type="submit"
                                     value="Login">Login
