--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,10 +1,12 @@
 <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
+
     <div class="navbar-brand">
         <a class="title" href="/home">
             <div class="h3">campus<b>Bid</b></div>
         </a>
     </div>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -15,10 +17,10 @@
                 <a href="/home">Home <span class="sr-only">(current)</span></a>
             </li>
 
-
             <% if(typeof userName != "undefined"){ %>
                 <li class="nav-item dropdown">
-                    <a class="dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a class="dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                       aria-haspopup="true" aria-expanded="false">
                         <%= userName %>
                     </a>
                     <div class="dropdown-menu drop-down-menu-align-fix" aria-labelledby="navbarDropdown">
