--- a/views/products.ejs
+++ b/views/products.ejs
@@ -2,22 +2,29 @@
 <main style="margin:0px ;margin-top: 100px; ">
     <div class="container-fluid">
         <div class="row justify-content-center">
-            <div class="col-md-4 col-sm-12">
-                <div class="input-group  mb-3">
+            <div class="col-md-4 col-sm-8">
+
                     <form class="form-inline" action="/products/search" method="get">
-                        <input type="text" name="searchQuery" class="form-control input-custom mr-2" placeholder="Search All Products" aria-label="Search" aria-describedby="button-search">
-                        <div class="input-group-append">
-                            <button class="btn btn-outline-danger" type="submit" id="button-addon2"><i class="fas fa-search"></i></button>
+                        <div class="input-group mb-3">
+                            <input type="text" name="searchQuery" class="form-control input-custom" placeholder="Search All Products" aria-label="Search" aria-describedby="button-search">
+                            <div class="input-group-append">
+                                <button type="submit" class="btn btn-sm btn-outline-danger btn-outline-secondary" type="button"><i class="fas fa-search"></i></button>
+                            </div>
                         </div>
+
                     </form>
-                </div>
+
             </div>
         </div>
+
+
+
+
         <div class="row">
             <div class="col-md-3 col-sm-12">
                 <% include ./partials/categorySideBar.ejs %>
             </div>
-            <div class="col-md-8 col-sm-12">
+            <div class="col-md-8 col-sm-12 mx-auto text-center" align="center">
                 <% include ./partials/productsTemplate.ejs %>
             </div>
         </div>
