--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -19,6 +19,13 @@
 <body>
 
 <%- body %>
+<footer>
+
+    <div class="footer-copyright text-center py-3">
+        <hr>
+        Developed with <i class="fas fa-heart" style="color:#b51c2b;"></i> by<a href="https://github.com/tmibvishal/"> Vishal Singh</a>
+    </div>
+</footer>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
