--- a/views/partials/categorySideBar.ejs
+++ b/views/partials/categorySideBar.ejs
@@ -1,7 +1,7 @@
 <ul style="list-style: none;" class="list-group">
 
 
-
+        <li class="list-group-item"><h6>Categories</h6></li>
         <li class="list-group-item"><a href="/products">All</a></li>
         <li class="list-group-item"><a href="/products/category/Books, Novels & Notes">Books, Novels & Notes</a></li>
         <li class="list-group-item"><a href="/products/category/Stationery">Stationery</a>
