--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -2,7 +2,7 @@
 
     <div class="navbar-brand">
         <a class="title" href="/home">
-            <div class="h3">campus<b>Bid</b></div>
+            <div class="h3"><i class="fas fa-shopping-bag" style="color: #d14f4b"></i> &nbsp;campus<b><span style="color: #d14f4b">Bid</span></b></div>
         </a>
     </div>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
