remove the error showing 'user does not defined everywhere' and fix bugs and update readme

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -23,7 +23,7 @@
 
     <div class="footer-copyright text-center py-3">
         <hr>
-        Developed with <i class="fas fa-heart" style="color:#b51c2b;"></i> by<a href="https://github.com/tmibvishal/"> Vishal Singh</a>
+        Developed with <i class="fas fa-heart" style="color:#d14f4b;"></i> by<a href="https://github.com/tmibvishal/"> Vishal Singh</a>
     </div>
 </footer>
 
