--- a/views/registerUser.ejs
+++ b/views/registerUser.ejs
@@ -1,7 +1,7 @@
 <main>
     <div class="container">
-        <div class="row justify-content-center">
-            <a class="title" href="/home"><div class="h1">campus<b>Bid</b></div></a>
+        <div class="row justify-content-center mt-4">
+            <div class="h3"><i class="fas fa-shopping-bag" style="color: #d14f4b"></i> &nbsp;campus<b><span style="color: #d14f4b">Bid</span></b></div>
         </div>
         <br>
         <div class="row">
